--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "swiper": "^7.0.8"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
-    "@types/react-slick": "^0.23.5",
     "@types/styled-components": "^5.1.14",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "babel-plugin-styled-components": "^1.13.2",
